--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,14 @@
 {
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/*.olean": true
+    },
+    "git.openRepositoryInParentFolders": "never",
     "editor.fontSize": 13,
     "editor.fontFamily": "JetBrains Mono",
     "editor.bracketPairColorization.enabled": false,
@@ -82,6 +92,7 @@
             },
         ]
     },
+    "lean4.infoview.style": ".goal-hyp {color: #aaccff !important; font-weight: normal !important;} .goal-vdash {color: #ffaaaa !important;} .goal-goals {color: #ffaaaa !important;} .goal-case {color: #e8e8e2 !important;}",
     "highlight.regexes": {
         "(∧|∨|→|↔|∀|∃|:=|=>)": [
             {
