--- a/settings.json
+++ b/settings.json
@@ -10,14 +10,14 @@
     },
     "git.openRepositoryInParentFolders": "never",
     "editor.fontSize": 13,
-    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontFamily": "Jetbrains Mono",
     "editor.bracketPairColorization.enabled": false,
     "editor.tokenColorCustomizations": {
-        "keywords": "#e8e8e2",
-        "functions": "#e8e8e2",
-        "types": "#e8e8e2",
-        "strings": "#e8e8e2",
-        "numbers": "#e8e8e2",
+        "keywords": "#dddddd",
+        "functions": "#dddddd",
+        "types": "#dddddd",
+        "strings": "#dddddd",
+        "numbers": "#dddddd",
         "comments": "#999999",
         "textMateRules": [
             {
@@ -37,42 +37,42 @@
             {
                 "scope": "source.lean4",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
             {
                 "scope": "constant.language.lean4",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
             {
                 "scope": "constant.character.escape.lean4",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
             {
                 "scope": "variable.other.property",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
             {
                 "scope": "storage.type.lean4",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
             {
                 "scope": "entity.name.function.lean4",
                 "settings": {
-                    "foreground": "#e8e8e2",
+                    "foreground": "#dddddd",
                     "fontStyle": ""
                 }
             },
@@ -134,7 +134,6 @@
             },
         ]
     },
-    "lean4.infoview.style": ".goal-hyp {color: #aaccff !important; font-weight: normal !important;} .goal-vdash {color: #ffaaaa !important;} .goal-goals {color: #ffaaaa !important;} .goal-case {color: #e8e8e2 !important;}",
     "highlight.regexes": {
         "(∧|∨|→|↔|∀|∃|:=|=>)": [
             {
@@ -148,7 +147,9 @@
             }
         ]
     },
+    "lean4.infoview.style": ".goal-hyp {color: #aaccff !important; font-weight: normal !important;} .goal-vdash {color: #ffaaaa !important;} .goal-goals {color: #ffaaaa !important;} .goal-case {color: #dddddd !important;}",
     "workbench.colorTheme": "Monokai",
-    "diffEditor.ignoreTrimWhitespace": false,
-    "window.zoomLevel": 1
+    "diffEditor.ignoreTrimWhitespace": true,
+    "editor.accessibilitySupport": "off",
+    "editor.stickyScroll.enabled": false
 }
