--- a/settings.json
+++ b/settings.json
@@ -145,6 +145,11 @@
                 "color": "#999999"
             }
         ],
+        "(Type\\*)": [
+            {
+                "color": "#dddddd",
+            }
+        ],
         "(sorry)": [
             {
                 "color": "#000000",
